# petri-dish-nca

./: .gitignore  README.md  implemented.md  new.md  pyproject.toml
configs/: example.json  tiny-config.json
notebooks/: interactive_viz.ipynb
src/: config.py  model.py  train.py  world.py
