[project]
name = "petri-dish-nca"
version = "1.0.0"
description = "Sakana AI's project for a multi-agent NCA substrate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "imageio>=2.37.0",
    "matplotlib>=3.10.7",
    "nbstripout>=0.8.1",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "torch>=2.8.0",
    "wandb>=0.21.3",
]
